# poc-pipeline

./: Cargo.toml  README.md  TODO.md  index.html
src/: README.md  browser_state.rs  cairo_compositor.rs  cairo_renderer.rs  common.rs  compositor.rs  document.rs  geo.rs  layouter.rs  main.rs  paint.rs  painter.rs  rasterize.rs  rasterizer.rs  render_tree.rs  store.rs  taffy.rs  tiler.rs  utils.rs
src/cairo_renderer/: debug.rs  rasterize.rs
src/common/: browser_state.rs  document.rs  font.rs  geo.rs  hash.rs  image.rs  image_store.rs  media.rs  media_store.rs  svg.rs  svg_store.rs  texture.rs  texture_store.rs
src/common/document/: document.rs  node.rs  parser.rs  style.rs
src/common/font/: pango.rs  parley.rs  skia.rs
src/common/media/: media.rs  media_store.rs  svg.rs
src/compositor/: cairo.rs  skia.rs  vello.rs
src/compositor/cairo/: compositor.rs
src/compositor/skia/: compositor.rs
src/compositor/vello/: compositor.rs
src/document/: document.rs  node.rs  style.rs
src/layering/: layer.rs
src/layouter/: box_model.rs  boxmodel.rs  css_taffy_converter.rs  pango_text.rs  taffy.rs  text.rs
src/layouter/text/: pango.rs  parley.rs  skia.rs
src/painter/: commands.rs  texture_store.rs
src/painter/commands/: border.rs  brush.rs  color.rs  image.rs  rectangle.rs  text.rs
src/rasterize/: texture_store.rs
src/rasterizer/: cairo.rs  skia.rs  texture_store.rs  vello.rs
src/rasterizer/cairo/: brush.rs  rectangle.rs
src/rasterizer/cairo/rasterize/: _element.rs  _text.rs
src/rasterizer/cairo/text/: pango.rs
src/rasterizer/skia/: paint.rs  rectangle.rs  svg.rs  text.rs
src/rasterizer/skia/text/: skia.rs
src/rasterizer/vello/: brush.rs  rectangle.rs
src/rasterizer/vello/text/: pango.rs  parley.rs  skia.rs
src/render_tree/: tree.rs
src/rendertree_builder/: tree.rs
src/store/: image.rs  texture.rs
src/tiler/: tile_texture_cache.rs
src/utils/: browser_state.rs  geo.rs
tools/souper/: README.md  soupertoo.py
