[package]
name = "poc-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
taffy = "0.7.5"
gtk4 = "0.9.5"
parley = { version = "0.2.0", optional = true }
pangocairo = { version = "0.20.7", optional = true }
log = "0.4.25"
image = "0.25.5"
rand = "0.9.0"
sha2 = "0.10.8"
hex = "0.4.3"
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
csscolorparser = "0.7.0"
regex = "1.11.1"

[features]
default = ["pango", "backend_cairo"]
pango = ["dep:pangocairo"]
parley = ["dep:parley"]
backend_cairo = []
backend_vello = []
